[Win][Clang] InspectorNetworkAgent.cpp(1122,20): error: cannot decompose this type; 'std::tuple_size<const WTF::KeyValuePair<WTF::String, WTF::RefPtr<WTF::JSONImpl::Value, WTF::DumbPtrTraits<WTF::JSONImpl::Value> > >>::value' is not a valid integral const https://bugs.webkit.org/show_bug.cgi?id=201489

Unreviewed build fix for clang-cl.

clang-cl 8 can't use a structured binding for a const struct.

No behavior change.

* inspector/agents/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::interceptWithResponse): Not to use a structured binding for a const struct.

Canonical link: https://commits.webkit.org/215128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249524 268f45cc-cd09-0410-ab3c-d52691b4dbfc